--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -11,7 +11,7 @@
         <mat-error *ngIf="emailInput.hasError('required')">Field must not be empty</mat-error>
       </mat-form-field>
       <mat-form-field>
-        <input matInput type="text" placeholder="User Name" name="username" ngModel required #nameInput="ngModel">
+        <input matInput type="text" placeholder="User Name" name="username" ngModel required #nameInput="ngModel" (keydown.space)="$event.preventDefault()">
         <mat-error *ngIf="emailInput.hasError('required')">Field must not be empty</mat-error>
       </mat-form-field>
       <mat-form-field>
